--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="perfil_nome">Nome</string>
+    <string name="perfil_data_nascimento">dd/mm/yyyy</string>
+    <string name="perfil_cargo">Cargo</string>
 </resources>
